--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@emotion/styled": "^11.13.0",
     "@headlessui/react": "^2.1.9",
     "@react-spring/web": "^9.7.4",
+    "@tsparticles/engine": "^3.5.0",
+    "@tsparticles/react": "^3.0.0",
     "animate.css": "^4.1.1",
     "aos": "^3.0.0-beta.6",
     "framer-motion": "^11.11.0",
